--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ license = "MIT OR Apache-2.0"
 rand = "0.8.4"
 num = "0.4.0"
 rug = "1.12.0"
-sha2 = "0.9"
 statrs = "0.15.0"
+criterion = "0.3.4"
+serde = { version = "1.0.117", features = ["derive"]}
+serde_json = "1.0.59"
 
 [features]
