--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,20 @@ license = "MIT OR Apache-2.0"
 
 [build-dependencies]
 
+[dev-dependencies]
+criterion = "0.3.4"
 
 [dependencies]
 rand = "0.8.4"
 num = "0.4.0"
 rug = "1.12.0"
 statrs = "0.15.0"
-criterion = "0.3.4"
 serde = { version = "1.0.117", features = ["derive"]}
 serde_json = "1.0.59"
 
 [features]
+
+
+[[bench]]
+name = "select_benchmark"
+harness = false
