--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "zfx-sortition"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 license = "MIT OR Apache-2.0"
+authors = ["zero.fx <contact@zerofxlabs.com>"]
+readme = "README.md"
+repository = "https://github.com/zfxlabs/zfx-sortition"
+description = "Cryptograhic sortition library on Rust"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
